--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="main-header header-sticky">
                 <div class="container-fluid">
                     <div class="menu-wrapper d-flex align-items-center justify-content-between">
-                        <div class="header-left d-flex align-items-center">
+                        <div class="header-left d-flex align-items-center col-6">
                             <!-- Logo -->
                             <div class="logo">
                                 <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         <!-- Mobile Menu -->
-                        <div class="col-12">
+                        <div class="col-6">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
                     </div>
