--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <!-- Mobile Menu -->
-                        <div class="col-12">
+                        <div class="row align-items-center d-block d-lg-none">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
                     </div>
