--- a/contact.html
+++ b/contact.html
@@ -75,21 +75,10 @@
                                     href="https://449022741-atari-embeds.googleusercontent.com/embeds/16cb204cf3a9d4d223a0a3fd8b0eec5d/inner-frame-minified.html?jsh=m%3B%2F_%2Fscs%2Fabc-static%2F_%2Fjs%2Fk%3Dgapi.lb.en.PLtFj_-5DjQ.O%2Fd%3D1%2Frs%3DAHpOoo-J85zQk73PCqZPyWTydWEIq3_4KA%2Fm%3D__features__#"><i
                                         class="fab fa-facebook-f"></i></a>
                             </div>
-                            <!-- Search Box -->
-                            <div class="search d-none d-md-block">
-                                <ul class="d-flex align-items-center">
-
-                                    <li>
-                                        <div class="card-stor">
-                                            <img src="assets/img/gallery/card.svg" alt="">
-                                            <span>0</span>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
+                             
                         </div>
                         <!-- Mobile Menu -->
-                        <div class="col-12">
+                        <div class="row align-items-center d-block d-lg-none">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
                     </div>
@@ -212,28 +201,35 @@
                         <div class="single-footer-caption mb-50">
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
-                                <div class=" mb-35 logo">
+                                <div class="mb-35 footer-logo d-flex justify-content-center">
                                     <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
                                 </div>
-                                <div class="footer-tittle">
-                                    <div class="footer-pera">
-                                        <p>Yaka Brand Fashion is not just clothing—it’s a rebellion against forgotten history. Born from the shadows of Sri Lanka’s 5,000-year-old Yaksha legends, we fuse ancient demonic energy with modern streetwear.</p>
+
+                                <div class="footer-tittle text-center">
+                                    <div class="footer-tittle">
+                                        <div class="footer-pera">
+                                            <p>Yaka Brand Fashion is not just clothing—it’s a rebellion against
+                                                forgotten history. Born from the shadows of Sri Lanka’s 5,000-year-old
+                                                Yaksha legends, we fuse ancient demonic energy with modern streetwear.
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                                 <!-- social -->
-                                <div class="footer-social">
-                                    <a  href="https://449022741-atari-embeds.googleusercontent.com/embeds/16cb204cf3a9d4d223a0a3fd8b0eec5d/inner-frame-minified.html?jsh=m%3B%2F_%2Fscs%2Fabc-static%2F_%2Fjs%2Fk%3Dgapi.lb.en.PLtFj_-5DjQ.O%2Fd%3D1%2Frs%3DAHpOoo-J85zQk73PCqZPyWTydWEIq3_4KA%2Fm%3D__features__#"><i
-                                        class="fab fa-instagram"></i></a>
+                                <div class="footer-social text-center">
+                                    <a
+                                        href="https://449022741-atari-embeds.googleusercontent.com/embeds/16cb204cf3a9d4d223a0a3fd8b0eec5d/inner-frame-minified.html?jsh=m%3B%2F_%2Fscs%2Fabc-static%2F_%2Fjs%2Fk%3Dgapi.lb.en.PLtFj_-5DjQ.O%2Fd%3D1%2Frs%3DAHpOoo-J85zQk73PCqZPyWTydWEIq3_4KA%2Fm%3D__features__#"><i
+                                            class="fab fa-instagram"></i></a>
                                     <a target="_blank"
-                                    href="https://449022741-atari-embeds.googleusercontent.com/embeds/16cb204cf3a9d4d223a0a3fd8b0eec5d/inner-frame-minified.html?jsh=m%3B%2F_%2Fscs%2Fabc-static%2F_%2Fjs%2Fk%3Dgapi.lb.en.PLtFj_-5DjQ.O%2Fd%3D1%2Frs%3DAHpOoo-J85zQk73PCqZPyWTydWEIq3_4KA%2Fm%3D__features__#"><i
-                                        class="fab fa-facebook-f"></i></a>
+                                        href="https://449022741-atari-embeds.googleusercontent.com/embeds/16cb204cf3a9d4d223a0a3fd8b0eec5d/inner-frame-minified.html?jsh=m%3B%2F_%2Fscs%2Fabc-static%2F_%2Fjs%2Fk%3Dgapi.lb.en.PLtFj_-5DjQ.O%2Fd%3D1%2Frs%3DAHpOoo-J85zQk73PCqZPyWTydWEIq3_4KA%2Fm%3D__features__#"><i
+                                            class="fab fa-facebook-f"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
                         <div class="single-footer-caption mb-50">
-                            <div class="footer-tittle">
+                            <div class="footer-tittle text-center">
                                 <h4>Quick links</h4>
                                 <ul>
                                     <li><a href="/home.html">Home</a></li>
@@ -249,7 +245,7 @@
 
                     <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
                         <div class="single-footer-caption mb-50">
-                            <div class="footer-tittle">
+                            <div class="footer-tittle text-center">
                                 <h4>Opening Hours</h4>
                                 <ul>
                                     <li><a href="#">Monday: Closed</a></li>
@@ -265,7 +261,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-4">
                         <div class="single-footer-caption mb-50">
-                            <div class="footer-tittle">
+                            <div class="footer-tittle text-center">
                                 <h4>Contact</h4>
                                 <ul>
                                     <li><a href="#">074 257 0448</a></li>
