--- a/gallary.html
+++ b/gallary.html
@@ -50,15 +50,15 @@
                         <div class="header-left d-flex align-items-center">
                             <!-- Logo -->
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="/"><img src="assets/img/logo/logo.png" alt=""></a>
                             </div>
                             <!-- Main-menu -->
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="shop.html">shop</a></li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a href="/">Home</a></li>
+                                        <li><a href="/shop">shop</a></li>
+                                        <li><a href="/about">About</a></li>
                                         <li><a href="blog.html">Blog</a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">Blog</a></li>
@@ -67,7 +67,7 @@
                                                 <li><a href="product_details.html">Product Details</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="/contact">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -111,7 +111,7 @@
                     <div class="col-lg-12">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="/">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Gallery</a></li>
                             </ol>
                         </nav>
@@ -334,7 +334,7 @@
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
                                 <div class=" mb-35 logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                    <a href="/"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-tittle">
@@ -360,10 +360,10 @@
                                 <h4>Quick links</h4>
                                 <ul>
                                     <li><a href="/home.html">Home</a></li>
-                                    <li><a href="/about.html">About</a></li>
-                                    <li><a href="/shop.html">Shop</a></li>
-                                    <li><a href="/contact.html">Contact</a></li>
-                                    <li><a href="/contact.html">Gallery</a></li>
+                                    <li><a href="/about">About</a></li>
+                                    <li><a href="/shop">Shop</a></li>
+                                    <li><a href="/contact">Contact</a></li>
+                                    <li><a href="/contact">Gallery</a></li>
 
                                 </ul>
                             </div>
