--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                         <div class="header-left d-flex align-items-center col-6">
                             <!-- Logo -->
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="/"><img src="assets/img/logo/logo.png" alt=""></a>
                             </div>
                             <!-- Main-menu -->
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">Home</a></li>
-                                        <li><a href="shop.html">shop</a></li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a class="active" href="/">Home</a></li>
+                                        <li><a href="/shop">shop</a></li>
+                                        <li><a href="/about">About</a></li>
                                         <!-- <li><a href="gallary.html">Gallery</a></li> -->
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="/contact">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -132,7 +132,7 @@
                                     <div class="hero__caption">
                                         <h1>Look & Feel Beautiful</h1>
                                         <h4>The Best Service. The Best Styles.</h4>
-                                        <a href="shop.html" class="btn">Shop Now</a>
+                                        <a href="/shop" class="btn">Shop Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -148,7 +148,7 @@
                                     <div class="hero__caption">
                                         <h1>Look & Feel Beautiful</h1>
                                         <h4>The Best Service. The Best Styles.</h4>
-                                        <a href="shop.html" class="btn">Shop Now</a>
+                                        <a href="/shop" class="btn">Shop Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -164,7 +164,7 @@
                                     <div class="hero__caption">
                                         <h1>Look & Feel Beautiful</h1>
                                         <h4>The Best Service. The Best Styles.</h4>
-                                        <a href="shop.html" class="btn">Shop Now</a>
+                                        <a href="/shop" class="btn">Shop Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                                     <span>Limited edition</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="shop.html" class="btn">Shop Now</a>
+                                    <a href="/shop" class="btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                                     <span>Shirts & hoodies</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="shop.html" class="btn">Shop Now</a>
+                                    <a href="/shop" class="btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -215,7 +215,7 @@
                                     <span>Denim</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="shop.html" class="btn">Shop Now</a>
+                                    <a href="/shop" class="btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                                     <span>Innerwear</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="shop.html" class="btn">Shop Now</a>
+                                    <a href="/shop" class="btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -346,7 +346,7 @@
                 <!-- Button -->
                 <div class="row justify-content-center">
                     <div class="room-btn">
-                        <a href="shop.html" class="border-btn">Browse More</a>
+                        <a href="/shop" class="border-btn">Browse More</a>
                     </div>
                 </div>
             </div>
@@ -361,7 +361,7 @@
                     <div class="single-question text-center">
                         <h2 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".1s">collection houses our
                             first-ever</h2>
-                        <a href="about.html" class="btn class=" wow fadeInUp" data-wow-duration="2s"
+                        <a href="/about" class="btn class=" wow fadeInUp" data-wow-duration="2s"
                             data-wow-delay=".4s">About Us</a>
                     </div>
                 </div>
@@ -434,7 +434,7 @@
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
                                 <div class="mb-35 footer-logo d-flex justify-content-center">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                    <a href="/"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
                                 </div>
 
                                 <div class="footer-tittle text-center">
@@ -465,10 +465,10 @@
                                 <h4>Quick links</h4>
                                 <ul>
                                     <li><a href="/home.html">Home</a></li>
-                                    <li><a href="/about.html">About</a></li>
-                                    <li><a href="/shop.html">Shop</a></li>
-                                    <li><a href="/contact.html">Contact</a></li>
-                                    <!-- <li><a href="/contact.html">Gallery</a></li> -->
+                                    <li><a href="/about">About</a></li>
+                                    <li><a href="/shop">Shop</a></li>
+                                    <li><a href="/contact">Contact</a></li>
+                                    <!-- <li><a href="/contact">Gallery</a></li> -->
 
                                 </ul>
                             </div>
