--- a/shop.html
+++ b/shop.html
@@ -50,16 +50,16 @@
                         <div class="header-left d-flex align-items-center">
                             <!-- Logo -->
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="/"><img src="assets/img/logo/logo.png" alt=""></a>
                             </div>
                             <!-- Main-menu -->
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a class="active" href="shop.html">shop</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="/">Home</a></li>
+                                        <li><a class="active" href="/shop">shop</a></li>
+                                        <li><a href="/about">About</a></li>
+                                        <li><a href="/contact">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -97,7 +97,7 @@
             <div class="container">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center mb-0">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Shop</a></li>
                     </ol>
                 </nav>
@@ -284,7 +284,7 @@
                                     <span>Glasses</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="shop.html" class="btn">Shop Now</a>
+                                    <a href="/shop" class="btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -297,7 +297,7 @@
                                     <span>Watches</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="shop.html" class="btn">Shop Now</a>
+                                    <a href="/shop" class="btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -310,7 +310,7 @@
                                     <span>Jackets</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="shop.html" class="btn">Shop Now</a>
+                                    <a href="/shop" class="btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -323,7 +323,7 @@
                                     <span>Clothes</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="shop.html" class="btn">Shop Now</a>
+                                    <a href="/shop" class="btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -396,7 +396,7 @@
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
                                 <div class="mb-35 footer-logo d-flex justify-content-center">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                    <a href="/"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
                                 </div>
 
                                 <div class="footer-tittle text-center">
@@ -427,10 +427,10 @@
                                 <h4>Quick links</h4>
                                 <ul>
                                     <li><a href="/home.html">Home</a></li>
-                                    <li><a href="/about.html">About</a></li>
-                                    <li><a href="/shop.html">Shop</a></li>
-                                    <li><a href="/contact.html">Contact</a></li>
-                                    <!-- <li><a href="/contact.html">Gallery</a></li> -->
+                                    <li><a href="/about">About</a></li>
+                                    <li><a href="/shop">Shop</a></li>
+                                    <li><a href="/contact">Contact</a></li>
+                                    <!-- <li><a href="/contact">Gallery</a></li> -->
 
                                 </ul>
                             </div>
