--- a/blog_details.html
+++ b/blog_details.html
@@ -48,15 +48,15 @@
            <div class="header-left d-flex align-items-center">
              <!-- Logo -->
              <div class="logo">
-               <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+               <a href="/"><img src="assets/img/logo/logo.png" alt=""></a>
              </div>
              <!-- Main-menu -->
              <div class="main-menu  d-none d-lg-block">
                <nav>
                  <ul id="navigation">
-                   <li><a href="index.html">Home</a></li> 
-                   <li><a href="shop.html">shop</a></li>
-                   <li><a href="about.html">About</a></li>
+                   <li><a href="/">Home</a></li> 
+                   <li><a href="/shop">shop</a></li>
+                   <li><a href="/about">About</a></li>
                    <li><a href="blog.html">Blog</a>
                      <ul class="submenu">
                        <li><a href="blog.html">Blog</a></li>
@@ -65,7 +65,7 @@
                        <li><a href="product_details.html">Product Details</a></li>
                      </ul>
                    </li>
-                   <li><a href="contact.html">Contact</a></li>
+                   <li><a href="/contact">Contact</a></li>
                  </ul>
                </nav>
              </div>   
@@ -113,7 +113,7 @@
       <div class="col-lg-12">
        <nav aria-label="breadcrumb">
         <ol class="breadcrumb justify-content-center">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="/">Home</a></li>
           <li class="breadcrumb-item"><a href="#">Blog Details</a></li> 
         </ol>
       </nav>
@@ -540,7 +540,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
            <div class="single-footer-caption mb-30">
             <!-- logo -->
             <div class="footer-logo mb-35">
-             <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+             <a href="/"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
            </div>
            <div class="footer-tittle">
              <div class="footer-pera">
