--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                                     href="https://449022741-atari-embeds.googleusercontent.com/embeds/16cb204cf3a9d4d223a0a3fd8b0eec5d/inner-frame-minified.html?jsh=m%3B%2F_%2Fscs%2Fabc-static%2F_%2Fjs%2Fk%3Dgapi.lb.en.PLtFj_-5DjQ.O%2Fd%3D1%2Frs%3DAHpOoo-J85zQk73PCqZPyWTydWEIq3_4KA%2Fm%3D__features__#"><i
                                         class="fab fa-facebook-f"></i></a>
                             </div>
-                             
+
                         </div>
                         <!-- Mobile Menu -->
 
@@ -204,57 +204,61 @@
 
         <!-- About Area End -->
         <!--? Popular Items Start -->
-        <div class="popular-items">
+        <div class="popular-items pt-50">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-popular-items mb-50 text-center">
+                        <div class="single-popular-items mb-50 text-center wow fadeInUp" data-wow-duration="1s"
+                            data-wow-delay=".1s">
                             <div class="popular-img">
                                 <img src="assets/img/gallery/popular1.png" alt="">
                                 <div class="img-cap">
-                                    <span>Glasses</span>
+                                    <span>Limited edition</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="#" class="btn">Shop Now</a>
+                                    <a href="/shop" class="btn">Shop Now</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-popular-items mb-50 text-center">
+                        <div class="single-popular-items mb-50 text-center wow fadeInUp" data-wow-duration="1s"
+                            data-wow-delay=".2s">
                             <div class="popular-img">
                                 <img src="assets/img/gallery/popular2.png" alt="">
                                 <div class="img-cap">
-                                    <span>Watches</span>
+                                    <span>Shirts & hoodies</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="#" class="btn">Shop Now</a>
+                                    <a href="" class="btn">Comming Soon</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-popular-items mb-50 text-center">
+                        <div class="single-popular-items mb-50 text-center wow fadeInUp" data-wow-duration="1s"
+                            data-wow-delay=".4s">
                             <div class="popular-img">
                                 <img src="assets/img/gallery/popular3.png" alt="">
                                 <div class="img-cap">
-                                    <span>Jackets</span>
+                                    <span>Denim</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="#" class="btn">Shop Now</a>
+                                    <a href="" class="btn">Comming Soon</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-popular-items mb-50 text-center">
+                        <div class="single-popular-items mb-50 text-center wow fadeInUp" data-wow-duration="1s"
+                            data-wow-delay=".6s">
                             <div class="popular-img">
                                 <img src="assets/img/gallery/popular4.png" alt="">
                                 <div class="img-cap">
-                                    <span>Clothes</span>
+                                    <span>Innerwear</span>
                                 </div>
                                 <div class="favorit-items">
-                                    <a href="#" class="btn">Shop Now</a>
+                                    <a href="" class="btn">Comming Soon</a>
                                 </div>
                             </div>
                         </div>
@@ -264,50 +268,57 @@
         </div>
         <!-- Popular Items End -->
         <!--? Services Area Start -->
-        <div class="categories-area section-padding40 gray-bg">
+        <div class="categories-area section-padding40 white-bg">
             <div class="container-fluid">
                 <div class="row">
+                    <!-- Fast Delivery -->
                     <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-cat mb-50">
+                        <div class="single-cat mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
                             <div class="cat-icon">
-                                <img src="assets/img/icon/services1.svg" alt="">
+                                <img src="assets/img/icon/services1.svg" alt="Fast Delivery">
                             </div>
                             <div class="cat-cap">
                                 <h5>Fast & Free Delivery</h5>
-                                <p>Free delivery on all orders</p>
+                                <p>Get your orders delivered within 1–3 days island-wide, at no extra cost.</p>
                             </div>
                         </div>
                     </div>
+
+                    <!-- Cash on Delivery -->
                     <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-cat mb-50">
+                        <div class="single-cat mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
                             <div class="cat-icon">
-                                <img src="assets/img/icon/services2.svg" alt="">
+                                <img src="assets/img/icon/services2.svg" alt="Cash on Delivery">
                             </div>
                             <div class="cat-cap">
-                                <h5>Fast & Free Delivery</h5>
-                                <p>Free delivery on all orders</p>
+                                <h5>Cash on Delivery</h5>
+                                <p>Pay conveniently at your doorstep once your order arrives.</p>
                             </div>
                         </div>
                     </div>
+
+                    <!-- Secure Payments -->
                     <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-cat mb-30">
+                        <div class="single-cat mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                             <div class="cat-icon">
-                                <img src="assets/img/icon/services3.svg" alt="">
+                                <img src="assets/img/icon/services3.svg" alt="Secure Payments">
                             </div>
                             <div class="cat-cap">
-                                <h5>Fast & Free Delivery</h5>
-                                <p>Free delivery on all orders</p>
+                                <h5>100% Secure Payments</h5>
+                                <p>Trusted and safe payment options with full encryption protection.</p>
                             </div>
                         </div>
                     </div>
+
+                    <!-- Premium Quality -->
                     <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-cat">
+                        <div class="single-cat wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                             <div class="cat-icon">
-                                <img src="assets/img/icon/services4.svg" alt="">
+                                <img src="assets/img/icon/services4.svg" alt="Premium Quality">
                             </div>
                             <div class="cat-cap">
-                                <h5>Fast & Free Delivery</h5>
-                                <p>Free delivery on all orders</p>
+                                <h5>Premium Quality Guaranteed</h5>
+                                <p>Every product is inspected by our team before shipping to ensure quality.</p>
                             </div>
                         </div>
                     </div>
@@ -391,7 +402,7 @@
                                 <ul>
                                     <li><a href="#">074 257 0448</a></li>
                                     <li><a href="#">yakafashion.lk</a></li>
-                                    <li><a href="#">#173/10 Wethara Polgasowita, Sri Lanka</a></li>
+                                    <li><a href="#">Head Office 173/10 Wethara Polgasowita</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -432,9 +443,13 @@
     </div>
     <!-- Search model end -->
     <!-- Scroll Up -->
+    <div id="whatsapp">
+        <a title="Go to Top" href="https://wa.me/94742570448" target="_blank"> <i class="fab fa-whatsapp"></i></a>
+    </div>
     <div id="back-top">
         <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
     </div>
+
 
     <!-- JS here -->
     <!-- Jquery, Popper, Bootstrap -->
