--- a/gallary.html
+++ b/gallary.html
@@ -393,7 +393,7 @@
                                 <ul>
                                     <li><a href="#">074 257 0448</a></li>
                                     <li><a href="#">yakafashion.lk</a></li>
-                                    <li><a href="#">#173/10 Wethara Polgasowita, Sri Lanka</a></li>
+                                    <li><a href="#">Head Office 173/10 Wethara Polgasowita</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -434,9 +434,13 @@
     </div>
     <!-- Search model end -->
     <!-- Scroll Up -->
+    <div id="whatsapp">
+        <a title="Go to Top"  href="https://wa.me/94742570448" target="_blank"> <i class="fab fa-whatsapp"></i></a>
+    </div>
     <div id="back-top">
         <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
     </div>
+
 
     <!-- JS here -->
     <!-- Jquery, Popper, Bootstrap -->
